--- a/evaluations/high.html
+++ b/evaluations/high.html
@@ -72,6 +72,27 @@
         .back-button:hover {
             background-color: #003366;
         }
+		
+		.circle, .download-button {
+            width: 150px;
+            height: 150px;
+            background-color: white;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            font-weight: bold;
+            color: #004080;
+            text-decoration: none;
+            border: 3px solid #004080;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .circle:hover, .download-button:hover {
+            background-color: #004080;
+            color: white;
+        }
 
         footer {
             background-color: #004080;
@@ -95,7 +116,11 @@
         </div>
         <div class="container">
             <a href="https://elearnningcontent.blob.core.windows.net/elearnningcontent/content/2025/Classroom_and_home_assessments_and_performances/Secondry1.html"
-                class="circle">الصف الاول الثانوية</a>
+                class="circle"> 📚  جميع التقييمات للصف الاول الثانوي</a>
+			<!-- زر تحميل تقييمات الفلسفة -->
+            <a href="فلسفه ومنطق من الاسبوع الاول اللي الاسبوع الثاني عشر.pdf" class="download-button" download>
+                📚 حمل تقييمات الفلسفة لحد الاسبوع الثاني عشر
+            </a>
         </div>
         <a href="../index.html" class="back-button">الرجوع اللي الصفحه الرئيسية</a>
     </div>
